fix dark mode card color & adjust button color

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   margin: 0 20px 0 20px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   max-width: 600px;
-  background-color: rgb(188, 204, 190);
+  background-color: rgb(222, 221, 239);
 }
 
 .main {
@@ -49,6 +49,6 @@
   }
 
   .card {
-    background-color: rgb(188, 204, 190);
+    background-color: rgb(222, 221, 239);
   }
 }
