--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #afb1dc;
+  background-color: #cdcdee;
   cursor: pointer;
   transition: border-color 0.25s;
 }
